# chatgpt-plugin-sample

./: README.md  main.py  pyproject.toml
.well-known/: ai-plugin.json
src/chatgpt_plugin_sample/: __init__.py
