[project]
name = "chatgpt-plugin-sample"
version = "0.1.0"
description = "Add a short description here"
authors = [
    { name = "ymzkjpx", email = "ymzkjpx@gmail.com" }
]
dependencies = [
    "quart~=0.18.4",
    "quart_cors~=0.6.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "setuptools~=67.8.0",
]

[tool.hatch.metadata]
allow-direct-references = true
